--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,8 @@
         <ul>
             <li><a href = "{{ path('homepage') }}"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
             <li> <a href="{{ path('fos_user_security_login') }}"><i class="fa fa-unlock-alt" aria-hidden="true"></i> Login </a></li>
-            <li> <a href="{{ path('fos_user_registration_register') }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Register </a></li>
+            <li> <a href="{{ path('customer_registration') }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Register as customer</a></li>
+            <li> <a href="{{ path('shop_owner_registration') }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Register as shop owner </a></li>
             <li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com">info@example.com</a></li>
 
             <h1 style = "color:white;" id="demo"></h1>
