render google map

--- a/app/Resources/views/Map/index.html.twig
+++ b/app/Resources/views/Map/index.html.twig
@@ -10,4 +10,9 @@
 
             </div>
         </header>
+
+        <div class="col-md-12">
+            {{ ivory_google_map(map) }}
+            {{ ivory_google_api([map]) }}
+        </div>
 {% endblock %}
